# gwd

./: Cargo.toml  README.md  WebsiteBlocker.ps1
.github/workflows/: release.yml
src/: challenge.rs  error.rs  hosts.rs  main.rs
